src/.k8s/deployment.yml
kind: Namespace
apiVersion: v1
metadata:
  name: bot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bot
  name: bot-server
  labels:
    app: bot-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: bot-server
    spec:
      containers:
        - image: jailtonjunior/bot-custom:v2
          name: bot-server
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /botpress/data
              name: botpressserver
      volumes:
        - name: botpressserver
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: bot
  name: bot-server-service
spec:
  selector:
    app: bot-server
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bot
  name: bot-lang
  labels:
    app: bot-lang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot-lang
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: bot-lang
    spec:
      containers:
        - image: jailtonjunior/bot-custom:v2
          name: bot-lang
          resources:
            limits:
              memory: "3Gi"
              cpu: "500m"
            requests:
              memory: "3Gi"
              cpu: "500m"
          command: ["/bin/sh"]
          args:
            [
              "-c",
              "./duckling -p 8000 & ./bp lang --langDir /botpress/lang --port 3100",
            ]
          ports:
            - containerPort: 3100
            - containerPort: 8000
          volumeMounts:
            - mountPath: /botpress/lang
              name: bplang
      volumes:
        - name: bplang
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: bot
  name: bot-lang-service
spec:
  selector:
    app: bot-lang
  ports:
    - name: externalurl
      port: 3100
      targetPort: 3100
    - name: nlu
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: bot
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - botpress.limateixeira.site
      secretName: bot-api-tls
  rules:
    - host: botpress.limateixeira.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: bot-server-service
                port:
                  number: 80
